// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Existing models
model Candidate {
  id                Int               @id @default(autoincrement())
  firstName         String            @db.VarChar(100)
  lastName          String            @db.VarChar(100)
  email             String            @unique @db.VarChar(255)
  phone             String?           @db.VarChar(15)
  address           String?           @db.VarChar(100)
  createdAt         DateTime          @default(now()) @map("created_at")
  updatedAt         DateTime          @updatedAt @map("updated_at")
  educations        Education[]
  workExperiences   WorkExperience[]
  resumes           Resume[]
  applications      Application[]     // New relation from ERD

  @@index([firstName, lastName]) // Common search pattern
}

model Education {
  id            Int       @id @default(autoincrement())
  institution   String    @db.VarChar(100)
  title         String    @db.VarChar(250)
  startDate     DateTime  @map("start_date")
  endDate       DateTime? @map("end_date")
  candidateId   Int       @map("candidate_id")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")
  candidate     Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  @@index([candidateId])
  @@index([startDate, endDate]) // For date range queries
}

model WorkExperience {
  id          Int       @id @default(autoincrement())
  company     String    @db.VarChar(100)
  position    String    @db.VarChar(100)
  description String?   @db.VarChar(200)
  startDate   DateTime  @map("start_date")
  endDate     DateTime? @map("end_date")
  candidateId Int       @map("candidate_id")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  candidate   Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  @@index([candidateId])
  @@index([startDate, endDate]) // For date range queries
  @@index([company]) // For company-based searches
}

model Resume {
  id          Int       @id @default(autoincrement())
  filePath    String    @db.VarChar(500)
  fileType    String    @db.VarChar(50)
  uploadDate  DateTime  @map("upload_date")
  candidateId Int       @map("candidate_id")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  candidate   Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  @@index([candidateId])
  @@index([uploadDate]) // For date-based filtering
  @@index([fileType]) // For filtering by file type
}

// New models from ERD
model Company {
  id                Int         @id @default(autoincrement())
  name              String      @db.VarChar(100)
  description       String?     @db.Text @map("description") // Moved from Position for normalization
  createdAt         DateTime    @default(now()) @map("created_at")
  updatedAt         DateTime    @updatedAt @map("updated_at")
  employees         Employee[]
  positions         Position[]

  @@index([name]) // For company name searches
}

model Employee {
  id        Int         @id @default(autoincrement())
  companyId Int         @map("company_id")
  name      String      @db.VarChar(100)
  email     String      @unique @db.VarChar(255)
  role      String      @db.VarChar(50)
  isActive  Boolean     @default(true) @map("is_active")
  createdAt DateTime    @default(now()) @map("created_at")
  updatedAt DateTime    @updatedAt @map("updated_at")
  company   Company     @relation(fields: [companyId], references: [id], onDelete: Cascade)
  interviews Interview[]

  @@index([companyId])
  @@index([name]) // For name-based searches
  @@index([role]) // For role-based filtering
  @@index([isActive]) // For active/inactive filtering
}

model InterviewFlow {
  id          Int             @id @default(autoincrement())
  description String          @db.VarChar(255)
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")
  steps       InterviewStep[]
  positions   Position[]
}

model InterviewType {
  id          Int             @id @default(autoincrement())
  name        String          @db.VarChar(100)
  description String?         @db.Text
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")
  steps       InterviewStep[]

  @@index([name]) // For name-based searches
}

model InterviewStep {
  id              Int           @id @default(autoincrement())
  interviewFlowId Int           @map("interview_flow_id")
  interviewTypeId Int           @map("interview_type_id")
  name            String        @db.VarChar(100)
  orderIndex      Int           @map("order_index")
  createdAt       DateTime      @default(now()) @map("created_at")
  updatedAt       DateTime      @updatedAt @map("updated_at")
  interviewFlow   InterviewFlow @relation(fields: [interviewFlowId], references: [id], onDelete: Cascade)
  interviewType   InterviewType @relation(fields: [interviewTypeId], references: [id])
  interviews      Interview[]

  @@index([interviewFlowId])
  @@index([interviewTypeId])
  @@index([orderIndex]) // For ordering operations
}

model Position {
  id                 Int           @id @default(autoincrement())
  companyId          Int           @map("company_id")
  interviewFlowId    Int           @map("interview_flow_id")
  title              String        @db.VarChar(100)
  description        String?       @db.Text
  status             String        @db.VarChar(50)
  isVisible          Boolean       @default(true) @map("is_visible")
  location           String?       @db.VarChar(100)
  jobDescription     String?       @db.Text @map("job_description")
  requirements       String?       @db.Text
  responsibilities   String?       @db.Text
  salaryMin          Decimal?      @db.Decimal(10, 2) @map("salary_min")
  salaryMax          Decimal?      @db.Decimal(10, 2) @map("salary_max")
  employmentType     String?       @db.VarChar(50) @map("employment_type")
  benefits           String?       @db.Text
  applicationDeadline DateTime?    @map("application_deadline")
  contactInfo        String?       @db.VarChar(255) @map("contact_info")
  createdAt          DateTime      @default(now()) @map("created_at")
  updatedAt          DateTime      @updatedAt @map("updated_at") 
  company            Company       @relation(fields: [companyId], references: [id], onDelete: Cascade)
  interviewFlow      InterviewFlow @relation(fields: [interviewFlowId], references: [id])
  applications       Application[]

  @@index([companyId])
  @@index([interviewFlowId])
  @@index([status]) // For status-based filtering
  @@index([location]) // For location-based searches
  @@index([isVisible]) // For visibility filtering
  @@index([applicationDeadline]) // For deadline-based filtering
  @@index([employmentType]) // For employment type filtering
  @@index([title]) // For job title searches
}

model Application {
  id              Int         @id @default(autoincrement())
  positionId      Int         @map("position_id")
  candidateId     Int         @map("candidate_id")
  applicationDate DateTime    @map("application_date")
  status          String      @db.VarChar(50)
  notes           String?     @db.Text
  createdAt       DateTime    @default(now()) @map("created_at")
  updatedAt       DateTime    @updatedAt @map("updated_at")
  position        Position    @relation(fields: [positionId], references: [id], onDelete: Cascade)
  candidate       Candidate   @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  interviews      Interview[]

  @@index([positionId])
  @@index([candidateId])
  @@index([applicationDate]) // For date-based filtering
  @@index([status]) // For status-based filtering
  @@index([positionId, status]) // Compound index for common query pattern
}

model Interview {
  id              Int           @id @default(autoincrement())
  applicationId   Int           @map("application_id")
  interviewStepId Int           @map("interview_step_id")
  employeeId      Int           @map("employee_id")
  interviewDate   DateTime      @map("interview_date")
  result          String?       @db.VarChar(50)
  score           Int?
  notes           String?       @db.Text
  createdAt       DateTime      @default(now()) @map("created_at")
  updatedAt       DateTime      @updatedAt @map("updated_at")
  application     Application   @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  interviewStep   InterviewStep @relation(fields: [interviewStepId], references: [id])
  employee        Employee      @relation(fields: [employeeId], references: [id])

  @@index([applicationId])
  @@index([interviewStepId])
  @@index([employeeId])
  @@index([interviewDate]) // For date-based filtering
  @@index([result]) // For result-based filtering
  @@index([applicationId, interviewStepId]) // Compound index for common query pattern
} 